fixed the services pages, add new details to services pages
fixed the services pages, add new details to services pages

--- a/commerical-painting.html
+++ b/commerical-painting.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="banner.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-
+    <link rel="stylesheet" href="breadcrumb.css">
+    <link rel="stylesheet" href="service-sidebar.css">
+    <link rel="stylesheet" href="servicePictureModal.css">
 
 
     <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
@@ -19,8 +21,7 @@
 </head>
 
 <body>
-
-    <!-- Header -->
+    <!-- Logon Header -->
     <div class="container-fluid">
         <div class="row image-container" style="background-color: white; height: 80px;">
             <a href="home.html"><img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image"
@@ -60,6 +61,7 @@
         </div>
     </div>
 
+    <!-- navigation part -->
     <nav class="navbar navbar-expand-md  navbar-dark bg-dark" id="menu-nav">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar"
             aria-controls="navigation-bar" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,38 +95,200 @@
         </div>
     </nav>
 
+    <!-- Breadcrumb Part -->
+    <div id="heading-breadcrumbs">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="breadcrumb">
+                        <li><a href="home.html">Home</a></li>
+                        <li>Commerical Painters</li>
+                    </ul>
+                    <h1>Commerical Painters</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Main content -->
     <div class="container" style="margin-top:30px">
         <div class="row">
-            <div class="col-sm-8">
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Dec 7, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
-                <br>
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Sep 2, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
-            </div>
-            <div class="col-sm-4">
-                <h2>Side Bar</h2>
-                <!-- The sidebar -->
-                <div class="sidebar">
-                    <a class="active" href="#home">Home</a>
-                    <a href="#news">News</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#about">About</a>
+            <div class="col-sm-2">
+
+                <!-- our service side-navbar -->
+                <div id="myNav" class="overlay">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <div class="overlay-content">
+                        <a href="residential-painting.html">Residential Painters</a>
+                        <a href="spray-painting.html">Spraying Painters</a>
+                        <a href="roof-painting.html">Roof Painters</a>
+                        <a class="active" href="commerical-painting.html">Commercial Painters</a>
+                        <a href="plastering.html">Plastering</a>
+                        <a href="dulux-colour-consultation.html">Dulux Colour Consultation</a>
+                    </div>
                 </div>
+
+                <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; Our Service</span>
+            </div>
+
+            <div class="col-sm-10">
+                <h2
+                    style="margin-bottom: 10px; font-family: 'Zhi Mang Xing', cursive; letter-spacing: 3px; font-size: 50px; font-weight:bold;">
+                    Commercial Painters in Melbourne</h2>
+                <img style="width: 100%; " src="img/webimg/commercial_painters_1.jpg">
+                <br />
+                <br />
+                <p style="font-size: 18px;">At Milad Painting, our commercial painters in Melbourne can transform the
+                    interior and exterior appearance of your commercial property by giving it a great new look. Whether
+                    you’re looking to increase the value of your property or create a great first impression for clients
+                    and visitors, you can rely on our team to deliver the best results. We use great care and attention
+                    to detail when carrying out all painting tasks, giving you the best opportunity to attract new
+                    customers and clients while impressing existing ones.</p>
+                <br />
+                <h2 style="font-family: 'Zhi Mang Xing', cursive; font-size: 30px; font-weight:bold;">
+                    Why Choose Our Commercial Painters in Melbounre?</h2>
+                <p style="font-size: 18px;">
+                    Milad Painting can provide commercial painters in Melbourne who are professionally trained experts,
+                    possessing the knowledge and expertise necessary to handle buildings of any size and any dimension.
+                    Whether you need painters in Camberwell or painters in Keysborough, you can trust our experienced
+                    team to handle all your commercial painting needs.</p>
+
+                <p style="font-size: 18px;">
+                    As a leader in commercial painting services in Melbourne, Milad Painting upholds the highest
+                    standards of safety and compliance during and after each painting job we attend to. Our commercial
+                    painters in Melbourne are fully equipped to manage all your projects, be it large or small. We can
+                    also safely secure your office stationeries and clean up your office premises to ensure no mess is
+                    left behind.</p>
+                </br>
+                <h2 style="font-family: 'Zhi Mang Xing', cursive; font-size: 30px; font-weight:bold;">
+                    What Our Commercial Painters In Melbounre Are Known For? </h2>
+
+                <p style="font-size: 18px;">At Milad Painting, our commercial painters pride themselves on meeting the
+                    needs and exceeding the expectations of their clients. We are known for:</p>
+
+                <p style="font-size: 18px;">
+                    &#10061; Providing an accurate, obligation-free quote detailing the specifications for your
+                    commercial painting so you’ll know upfront what the cost will be
+                    <br />
+                    &#10061; Using premium-quality Dulux products that are chosen for their long-lasting qualities
+                    <br />
+                    &#10061; Discussing colour and product selections to suit your needs, ensuring you’ll be happy with
+                    the final result
+                    <br />
+                    &#10061; Being punctual, reliable and honest
+                    <br />
+                    &#10061; Taking care with commercial furnishings and gardens, as well as performing an entire site
+                    clean-up on completion to minimise hassle
+                    <br />
+                    <br />
+
+                    <h2 style="font-family: 'Zhi Mang Xing', cursive; font-size: 30px; font-weight:bold;">
+                        Additional Services Offered By Our Commercial Painters In Melbounre</h2>
+                    <p style="font-size: 18px;">Our commercial painters in Melbourne also specialise in the following
+                        fields:</p>
+
+                    <a style="color: rgb(9, 161, 34); font-size: 18px;" href="residential-painting.html"> &#10061;
+                        Residential
+                        Painters</a>
+                    </br>
+                    <a style="color: rgb(9, 161, 34); font-size: 18px;" href="spray-painting.html"> &#10061;
+                        Spraying
+                        Painters</a>
+                    </br>
+                    <a style="color: rgb(9, 161, 34); font-size: 18px;" href="roof-painting.html"> &#10061; Roof
+                        Painters</a>
+                    </br>
+                    <a style="color: rgb(9, 161, 34); font-size: 18px;" href="commerical-painting.html"> &#10061;
+                        Commercial Painting</a>
+                    </br>
+                    <a style="color: rgb(9, 161, 34); font-size: 18px;" href="plastering.html"> &#10061;
+                        Plastering</a>
+                    </br>
+                    <a style="color: rgb(9, 161, 34); font-size: 18px;" href="dulux-colour-consultation.html">
+                        &#10061;
+                        Dulux Colour
+                        Consultation</a>
+                    </br>
+                    </br>
+                    <p style="font-size: 18px;">Milad Painting is proud to be a leading provider of painting services
+                        for businesses. Contact us online or call us on <a href="tel:+6142130103">0442130103</a> – our
+                        commercial painters in
+                        Melbourne are looking forward to your call. to get the
+                        price list.</p>
+                    <p style="font-size: 18px;">Our service areas in Melbourne include: Mulgrave, Keysborough, Oakleigh
+                        and St Kilda. Whether you need commercial painters in Camberwell, exterior house painters in
+                        Brighton or interior house painters in Hawthorn, you can rely on our team to get the job done to
+                        the highest standard.</p>
+
+                    <div class="container">
+                        <div class="row">
+                            <div class="row">
+                                <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                    <a class="thumbnail" href="#" data-image-id="commercial-painting-img1"
+                                        data-toggle="modal" data-title="Commercial Painting Sample 1"
+                                        data-image="img/ClientPicture/16.jpg" data-target="#image-gallery">
+                                        <img class="img-thumbnail" src="img/ClientPicture/16.jpg"
+                                            alt="commercial-painting-img1">
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                    <a class="thumbnail" href="#" data-image-id="commercial-painting-img2"
+                                        data-toggle="modal" data-title="Commercial Painting Sample 2"
+                                        data-image="img/ClientPicture/18.jpg" data-target="#image-gallery">
+                                        <img class="img-thumbnail" src="img/ClientPicture/18.jpg"
+                                            alt="commercial-painting-img2">
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                    <a class="thumbnail" href="#" data-image-id="commercial-painting-img3"
+                                        data-toggle="modal" data-title="Commercial Painting Sample 3"
+                                        data-image="img/ClientPicture/27.jpg" data-target="#image-gallery">
+                                        <img class="img-thumbnail" src="img/ClientPicture/27.jpg"
+                                            alt="commercial-painting-img3">
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                    <a class="thumbnail" href="#" data-image-id="commercial-painting-img4"
+                                        data-toggle="modal" data-title="Commercial Painting Sample 4"
+                                        data-image="img/ClientPicture/28.jpg" data-target="#image-gallery">
+                                        <img class="img-thumbnail" src="img/ClientPicture/28.jpg"
+                                            alt="commercial-painting-img4">
+                                    </a>
+                                </div>
+
+
+                                <div class="modal fade" id="image-gallery" tabindex="-1" role="dialog"
+                                    aria-labelledby="myModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-lg">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4 class="modal-title" id="image-gallery-title"></h4>
+                                                <button type="button" class="close" data-dismiss="modal"><span
+                                                        aria-hidden="true">×</span><span class="sr-only">Close</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <img id="image-gallery-image" class="img-responsive col-md-12" src="">
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary float-left"
+                                                    id="show-previous-image"><i class="fa fa-arrow-left"></i>
+                                                </button>
+
+                                                <button type="button" id="show-next-image"
+                                                    class="btn btn-secondary float-right"><i
+                                                        class="fa fa-arrow-right"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
             </div>
         </div>
     </div>
@@ -135,7 +299,6 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
                     <h5 class="mb-4 font-weight-bold">CONTACT INFORMATION</h5>
-                    <p class="mb-4">Etiam laoreet in ex quis efficitur.</p>
                     <ul class="f-address">
                         <li>
                             <div class="row">
@@ -190,6 +353,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+    <script src="service-sidebar.js"></script>
+
+    <script src="servicePictureModal.js"></script>
+
+
 </body>
+
 
 </html>
