--- a/contact_us.html
+++ b/contact_us.html
@@ -137,28 +137,28 @@
             <div class="col-sm-4">
               <div class="form-group">
                 <label for="fname">First Name:*</label>
-                <input type="text" class="form-control" name="firstname" placeholder="Enter first name" id="fname"
+                <input type="text" class="form-control" name="firstname" placeholder="Enter first name..." id="fname"
                   required>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="form-group">
                 <label for="lname">Last Name:*</label>
-                <input type="text" class="form-control" name="lastname" placeholder="Enter last name" id="lname"
+                <input type="text" class="form-control" name="lastname" placeholder="Enter last name..." id="lname"
                   required>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="form-group">
                 <label for="email">Email address:*</label>
-                <input type="email" class="form-control" placeholder="Enter email" id="email" required>
+                <input type="email" class="form-control" placeholder="Enter email..." id="email" required>
               </div>
               <p style="font-weight: 600;color: red;text-align: right">( * ) Required Fields</p>
             </div>
             <div class="col-sm-12">
               <div class="form-group">
                 <label for="comment">Comment:</label>
-                <textarea id="comment" class="form-control" name="comment" placeholder="Write the message..."
+                <textarea id="comment" class="form-control" name="comment" placeholder="Write something to us..."
                   style="height:200px"></textarea>
               </div>
             </div>
