--- a/dulux-colour-consultation.html
+++ b/dulux-colour-consultation.html
@@ -13,15 +13,13 @@
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="breadcrumb.css">
     <link rel="stylesheet" href="service-sidebar.css">
-    <link rel="stylesheet" href="servicePictureModal.css">
-
 
     <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
 
 </head>
 
 <body>
-    <!-- Logon Header -->
+    <!-- Header -->
     <div class="container-fluid">
         <div class="row image-container" style="background-color: white; height: 80px;">
             <a href="home.html"><img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image"
@@ -61,7 +59,6 @@
         </div>
     </div>
 
-    <!-- navigation part -->
     <nav class="navbar navbar-expand-md  navbar-dark bg-dark" id="menu-nav">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar"
             aria-controls="navigation-bar" aria-expanded="false" aria-label="Toggle navigation">
@@ -102,29 +99,26 @@
                 <div class="col-md-12">
                     <ul class="breadcrumb">
                         <li><a href="home.html">Home</a></li>
-                        <li>Spray Painters</li>
+                        <li>Dulux Colour Consultation</li>
                     </ul>
-                    <h1>Spray Painters</h1>
+                    <h1>Dulux Colour Consultation</h1>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Main content -->
     <div class="container" style="margin-top:30px">
         <div class="row">
             <div class="col-sm-2">
-
-                <!-- our service side-navbar -->
                 <div id="myNav" class="overlay">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <div class="overlay-content">
                         <a href="residential-painting.html">Residential Painters</a>
-                        <a class="active" href="spray-painting.html">Spraying Painters</a>
+                        <a href="spray-painting.html">Spraying Painters</a>
                         <a href="roof-painting.html">Roof Painters</a>
                         <a href="commerical-painting.html">Commercial Painters</a>
                         <a href="plastering.html">Plastering</a>
-                        <a href="dulux-colour-consultation.html">Dulux Colour Consultation</a>
+                        <a class="active" href="dulux-colour-consultation.html">Dulux Colour Consultation</a>
                     </div>
                 </div>
 
@@ -132,96 +126,25 @@
             </div>
 
             <div class="col-sm-10">
-                <h2
-                    style="margin-bottom: 10px; font-family: 'Zhi Mang Xing', cursive; letter-spacing: 3px; font-size: 50px; font-weight:bold;">
-                    Spraying Painters In Melbounre</h2>
-                <p style="font-size: 18px;">Spray painting is a technique that is extensively used these days because
-                    they are easy, quick and can be finished before the scheduled period of time. It also reduces manual
-                    labour and relieves the painters from getting stressed! Thus water based paints are becoming
-                    popular. This is to make use of spray gun instead of brush that is used by painters to paint
-                    manually. Speed, quality of finish and flexibility are the main criteria’s you got to see when
-                    selecting a method to paint. Milad Painters Melbourne are specialized in Spray painting services
-                    and can bring amazing paint results because they are the best Melbourne painters you could ever
-                    find!</p>
-                <img style="width: 100%; " src="img/webimg/spray_painter.jpg">
-                <br />
-                <br />
-                <h2 style="font-family: 'Zhi Mang Xing', cursive; font-size: 30px; font-weight:bold;">
-                    Advantages of Spray Painting: </h2>
-                <p style="font-size: 18px;">
-                    &#10061; Ease to do repair work
-                    <br />
-                    &#10061; Faster process
-                    <br />
-                    &#10061; It dries very quickly!
-                    <br />
-                    &#10061; Varnishes, lacquers and water based products dry very fast and so can be recoated within
-                    hours of the first coat!
-                    <br />
-                    &#10061; You would be able to apply several coats on one single day which makes this process easy.
-                    <br />
-                    &#10061; Since it dries very fast, there is very little time for the dust particles to settle on it,
-                    which
-                    eliminates sanding process costs
-                    <br />
-                    &#10061; Techniques such as toning or shading, which cannot be applied effectively by hand can be
-                    done
-                    perfectly using Spray Painting
-                    <br />
-                    &#10061; By having control over pressure of the spray gun, the air fluid flow and fan size will
-                    allow even coats thereby eliminating thick spots and brush marks
-                    <br />
-                    &#10061; Spray painting is easy to master and gives a professional finish!
-                    <br />
-                    &#10061; Problems associated with a hand painting such as drips, sags, trapped air bubbles etc are
-                    greatly
-                    reduced
-                    <br />
-                    &#10061; Spray Painting greatly saves time
-                    <br />
-                    &#10061; Spray Painting reduces stress for painters and does not hurts their back as manual painting
-                    job does
-                    <br />
-                    &#10061; Spray Painting is a very fast process that saves days of manual labor
-                    <br />
-                    &#10061; Spray Painting is very much a DIY (Do It Yourself) process so self efforts get paid!!
-                </p>
-                <br />
-                <h4 style="font-family: 'Zhi Mang Xing', cursive;  font-size: 30px; font-weight:bold;">Disadvantages Of
-                    Spray Painting
-                </h4>
-                <p style="font-size: 18px;">
-                    &#10061; The main disadvantages of Spray Painting are
-                    <br />
-                    &#10061; Overspray
-                    <br />
-                    &#10061; Difficulty to control
-                    <br />
-                    &#10061; Spray Painting rough surfaces is tuff
-                </p>
-                <p style="font-size: 18px;">They are disadvantages of course but can be overcome with proper planning
-                    and comes along with little bit of practice! Carefully observe the limitations of Spray Painting and
-                    plan the process consequently. Planning starts with the pre-painting preparation for residential
-                    painting. All other processes that you do for manual painting, you would do for Spray Painting as
-                    well!! The difference is only when the masking phase begins!</p>
-                <h2
-                    style="font-family: 'Zhi Mang Xing', cursive; letter-spacing: 0px; font-size: 38px; font-weight:bold;">
-                    Preparation To Be Done Before Spraying Paint!</h2>
-                <p style="font-size: 18px;">
-                    &#8680; Overspray is one big problem that you would definitely face while handling Spray Paints! To
-                    protect your surroundings like furniture, windows, doors etc that are just near the area you Spray
-                    paint; completely cover them with plastic papers and tape them.
-                    <br />
-                    &#8680; Extensive areas can be protected with drop cloths. This helps you to avoid unnecessary over
-                    spray of paint on fence, neighbour’s properties that are close to your painting area etc…</p>
-                <br />
-                <p style="font-size: 18px;">Milad Painting have a team of professional and well experienced painters
-                    in Melbourne who can do Spray Painting in the finest way possible. Be it House painting,
-                    Commercial Painting or Industrial Painting; whether it is for your decorative needs or
-                    maintenance, Milad Painting is the one stop shop for all your painting, furnishing and
-                    decorative needs!!</p>
-                <p style="font-size: 18px;"> <strong>Contact Us</strong> immediately for a competitive quote! We are
-                    located in Melbourne.</p>
+                <h2>TITLE HEADING</h2>
+                <h5>Title description, Dec 7, 2017</h5>
+                <div class="fakeimg">Fake Image</div>
+                <p>Some text..</p>
+                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
+                    eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation
+                    ullamco.</p>
+                <br>
+                <h2>TITLE HEADING</h2>
+                <h5>Title description, Sep 2, 2017</h5>
+                <div class="fakeimg">Fake Image</div>
+                <p>Some text..</p>
+                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
+                    eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation
+                    ullamco.</p>
             </div>
         </div>
     </div>
@@ -288,9 +211,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
     <script src="service-sidebar.js"></script>
-
-    <script src="servicePictureModal.js"></script>
-
 
 </body>
 
