--- a/home.html
+++ b/home.html
@@ -100,18 +100,17 @@
     </ul>
 
     <div class="carousel-inner">
-      <div class="carousel-item active" style="background:url(img/webimg/wallpaper1.jpg)">
+      <div class="carousel-item active" style="background-color: rgb(209, 231, 250);">
         <div class="mask flex-center">
           <div class="container">
             <div class="row align-items-center">
               <div class="col-md-7 col-12 order-md-1 order-2">
-                <h4>Present your <br>
-                  awesome product</h4>
-                <p>Lorem ipsum dolor sit amet. Reprehenderit, qui blanditiis quidem rerum <br>
-                  necessitatibus praesentium voluptatum deleniti atque corrupti.</p>
-                <a href="#">Get Free Quote</a>
+                <h4>Welcome to <br>
+                  Milad Painting</h4>
+                <p style="color: black;">On Time. On Budget. On Guanantee To Last.</p>
+                <a data-target="#modalform" data-toggle="modal">Get Free Quote</a>
               </div>
-              <div class="col-md-5 col-12 order-md-2 order-1"><img src="https://i.imgur.com/NKvkfTT.png" class="mx-auto"
+              <div class="col-md-5 col-12 order-md-2 order-1"><img src="img/webimg/painting_person.png" class="mx-auto"
                   alt="slide"></div>
             </div>
           </div>
@@ -122,11 +121,11 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-md-7 col-12 order-md-1 order-2">
-                <h4>Present your <br>
-                  awesome product</h4>
+                <h4>High Quality <br>
+                  On Painting</h4>
                 <p>Lorem ipsum dolor sit amet. Reprehenderit, qui blanditiis quidem rerum <br>
                   necessitatibus praesentium voluptatum deleniti atque corrupti.</p>
-                <a href="#">BUY NOW</a>
+                <a data-target="#modalform" data-toggle="modal">Get Free Quote</a>
               </div>
               <div class="col-md-5 col-12 order-md-2 order-1"><img src="img/webimg/greenbrush.png" class="mx-auto"
                   alt="slide"></div>
@@ -143,9 +142,9 @@
                   awesome product</h4>
                 <p>Lorem ipsum dolor sit amet. Reprehenderit, qui blanditiis quidem rerum <br>
                   necessitatibus praesentium voluptatum deleniti atque corrupti.</p>
-                <a href="#">BUY NOW</a>
+                <a data-target="#modalform" data-toggle="modal">Get Free Quote</a>
               </div>
-              <div class="col-md-5 col-12 order-md-2 order-1"><img src="https://i.imgur.com/DGkR4OQ.png" class="mx-auto"
+              <div class="col-md-5 col-12 order-md-2 order-1"><img src="img/webimg/painting_person1.png" class="mx-auto"
                   alt="slide"></div>
             </div>
           </div>
@@ -158,6 +157,50 @@
         class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
   </div>
   <!--slide end-->
+
+
+  <!-- Modal Form Part -->
+  <div class="modal fade" id="modalform" tabindex="-1" role="dialog" aria-labelledby="modalformlabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header border-bottom-0">
+          <h5 class="modal-title" id="exampleModalLabel">Free Quote</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <form>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="name">Full Name:* </label>
+              <input type="text" class="form-control" id="name" aria-describedby="fullName"
+                placeholder="Enter full name..." required>
+
+            </div>
+            <div class="form-group">
+              <label for="phone">Phone Number:* </label>
+              <input type="phone" class="form-control" id="phone" placeholder="Enter phone number..." required>
+            </div>
+            <div class="form-group">
+              <label for="email">Email Address:* </label>
+              <input type="email" class="form-control" id="email" placeholder="Enter email address..." required>
+            </div>
+            <div class="form-group">
+              <label for="message">Message: </label>
+              <textarea class="form-control" id="message" placeholder="Write something to us..." rows="3"></textarea>
+            </div>
+            <small id="requiredFill" style="font-weight: 600;color: red;text-align: right" class="form-text">( * )
+              Required Fields</small>
+            <small id="safeText" class="form-text text-muted">Your information is safe with us.</small>
+          </div>
+          <div class="modal-footer border-top-0 d-flex justify-content-center">
+            <button type="submit" class="btn btn-success">Submit</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 
 
 
@@ -188,21 +231,24 @@
                 for a no-obligation quote and discover how we can make your painting job easy & stress free.
               </p>
               <p style="text-align: justify;">
-                &#8226; When you come to our services, you will definitely know that you make the right decision to make
+                &#10061; When you come to our services, you will definitely know that you make the right decision to
+                make
                 your
                 satisfaction comes true. These above reasons to tell you why:
                 <br />
-                &#8226; 100% punctual, reliable. You can be sure that once we work out the time, we will be there as you
+                &#10061; 100% punctual, reliable. You can be sure that once we work out the time, we will be there as
+                you
                 need.
                 <br />
-                &#8226; Always receive free quotations from us.
+                &#10061; Always receive free quotations from us.
                 <br />
-                &#8226; Almost we use the best Dulux brand products, unless you would like to have your own options.
+                &#10061; Almost we use the best Dulux brand products, unless you would like to have your own options.
                 <br />
-                &#8226; We will not charge you extra if we cause damages and we will 100% fix them to make you feel the
+                &#10061; We will not charge you extra if we cause damages and we will 100% fix them to make you feel the
                 best.
                 <br />
-                &#8226; Perfectly clean our working area after we finish the job so you just need to move your things in
+                &#10061; Perfectly clean our working area after we finish the job so you just need to move your things
+                in
                 and
                 start living under your dreaming house.
               </p>
@@ -351,7 +397,6 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
           <h5 class="mb-4 font-weight-bold">CONTACT INFORMATION</h5>
-          <p class="mb-4">Etiam laoreet in ex quis efficitur.</p>
           <ul class="f-address">
             <li>
               <div class="row">
