--- a/residential-painting.html
+++ b/residential-painting.html
@@ -13,13 +13,15 @@
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="breadcrumb.css">
     <link rel="stylesheet" href="service-sidebar.css">
+    <link rel="stylesheet" href="servicePictureModal.css">
+
 
     <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
 
 </head>
 
 <body>
-    <!-- Header -->
+    <!-- Logon Header -->
     <div class="container-fluid">
         <div class="row image-container" style="background-color: white; height: 80px;">
             <a href="home.html"><img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image"
@@ -59,6 +61,7 @@
         </div>
     </div>
 
+    <!-- navigation part -->
     <nav class="navbar navbar-expand-md  navbar-dark bg-dark" id="menu-nav">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar"
             aria-controls="navigation-bar" aria-expanded="false" aria-label="Toggle navigation">
@@ -107,16 +110,21 @@
         </div>
     </div>
 
+    <!-- Main content -->
     <div class="container" style="margin-top:30px">
         <div class="row">
             <div class="col-sm-2">
+
+                <!-- our service side-navbar -->
                 <div id="myNav" class="overlay">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <div class="overlay-content">
-                        <a class="active" href="#">Residential Painters</a>
-                        <a href=" #">Commercial Painters</a>
-                        <a href="#">Roof Painters</a>
-                        <a href="#">Plastering</a>
+                        <a class="active" href="residential-painting.html">Residential Painters</a>
+                        <a href="spray-painting.html">Spraying Painters</a>
+                        <a href="roof-painting.html">Roof Painters</a>
+                        <a href="commerical-painting.html">Commercial Painters</a>
+                        <a href="plastering.html">Plastering</a>
+                        <a href="dulux-colour-consultation.html">Dulux Colour Consultation</a>
                     </div>
                 </div>
 
@@ -124,43 +132,190 @@
             </div>
 
             <div class="col-sm-10">
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Dec 7, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
-                <br>
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Sep 2, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
+                <h2
+                    style="font-family: 'Zhi Mang Xing', cursive; letter-spacing: 3px; font-size: 50px; font-weight:bold;">
+                    House Painters In Melbourne</h2>
+                <p style="font-size: 18px;">At Milad Painting, our domestic painters in Melbourne can transform the
+                    interior and external spaces
+                    of your home and bring it to its full potential. Dedicated to obtaining the very best results for
+                    each and every job we attend to, our professional painters are fully qualified and certified to
+                    carry out painting tasks for your residence.</p>
+                <img src="img/webimg/residential_painter.jpeg">
+                <br />
+                <br />
+                <h2
+                    style="font-family: 'Zhi Mang Xing', cursive; letter-spacing: 0px; font-size: 28px; font-weight:bold;">
+                    Why Choose Milad Painting for Residential Painters Services?</h2>
+                <p style="font-size: 18px;">At Milad Painting, we’re proud to boast a team of fully qualified
+                    residential painters who possess
+                    years of experience and extensive expertise. Our exterior and interior house painters in Melbourne
+                    use the latest equipment and the most effective techniques to deliver superior results each and
+                    every time. You can be assured that our tradesmen will provide unmatched painting services that meet
+                    your needs and exceed your expectations.</p>
+                <p style="font-size: 18px; font-weight: bold;">Other reasons to choose our domestic painters in
+                    Melbourne
+                    include:</p>
+                <p style="font-size: 18px;">&#10061; We are dedicated to on-time delivery, keeping delays to a minimum
+                    <br />
+                    &#10061; We use only high-quality materials to ensure long lasting results
+                    <br />
+                    &#10061; We can take care of your overall furnishing needs
+                    <br />
+                    &#10061; We can make sure your house is free of painting hazards and safe for children and pets</p>
+                <br />
+                <h4 style="font-family: 'Zhi Mang Xing', cursive;  font-size: 24px; font-weight:bold;">
+                    When it Comes to Residential Painters Services, Milad Painting is Known For:
+                </h4>
+                <p style="font-size: 18px;">&#10061; Providing an obligation-free painting quotation detailing the
+                    specifications
+                    <br />
+                    &#10061; Using premium-quality Dulux products for the best results
+                    <br />
+                    &#10061; Discussing colour and product selection options with clients
+                    <br />
+                    &#10061; Punctuality and reliability, saving you time and money
+                    <br />
+                    &#10061; Honest work and pricing, ensuring you won’t be charged unreasonably
+                    <br />
+                    &#10061; Taking full care of your valuable furnishings and conducting an entire site clean-up on
+                    completion of our residential painters services</p>
+                <br />
+                <h2
+                    style="font-family: 'Zhi Mang Xing', cursive; letter-spacing: 0px; font-size: 28px; font-weight:bold;">
+                    Additional Services Our Domestic Painters in Melbourne Can Provide</h2>
+                <p style="font-size: 18px;">In addition to
+                    providing professional residential painters services and house painting in Melbourne,
+                    we also specialise in the following fields:</p>
+                <a style="color: rgb(9, 161, 34);font-size: 18px;" href="residential-painting.html"> &#8680;
+                    Residential
+                    Painters</a>
+                </br>
+                <a style="color: rgb(9, 161, 34);font-size: 18px;" href="spray-painting.html"> &#8680; Spraying
+                    Painters</a>
+                </br>
+                <a style="color: rgb(9, 161, 34);font-size: 18px;" href="roof-painting.html"> &#8680; Roof Painters</a>
+                </br>
+                <a style="color: rgb(9, 161, 34);font-size: 18px;" href="commerical-painting.html"> &#8680; Commercial
+                    Painting</a>
+                </br>
+                <a style="color: rgb(9, 161, 34);font-size: 18px;" href="plastering.html"> &#8680; Plastering</a>
+                </br>
+                <a style="color: rgb(9, 161, 34);font-size: 18px;" href="dulux-colour-consultation.html"> &#8680; Dulux
+                    Colour
+                    Consultation</a>
+                </br>
+                </br>
+                <h4 style="font-family: 'Zhi Mang Xing', cursive;  font-size: 24px; font-weight:bold;">
+                    Give Our Domestic Painters in Melbourne a Call Today </h4>
+                <p style="font-size: 18px;">Milad Painting is your one-stop shop for domestic painters in Melbourne.
+                    Call our friendly team on <a href="tel:+6142130103">0421301030</a> to learn more, request a quote
+                    or make a booking for our house painting services in
+                    Melbourne.
+                </p>
+                <p style="font-size: 18px;">We offer painting services to various suburbs of Melbourne, including
+                    Keysborough, Brighton, St. Kilda,
+                    Surrey Hills, Cheltenham, Toorak, Box Hill, Kew and Hawthorn. Whether you need painters in
+                    Camberwell or
+                    house painters in Dandenong, we have you covered.</p>
+                <p style="font-size: 18px;">In addition to our residential painters services, we can provide commercial
+                    painters in Melbourne for
+                    businesses requiring excellent painting services. Get in touch with us today to learn more about
+                    what we
+                    can do for your office or other place of work.</p>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                <a class="thumbnail" href="#" data-image-id="residential-painting-img1"
+                                    data-toggle="modal" data-title="Residentail Painting Sample 1"
+                                    data-image="img/ClientPicture/1.jpg" data-target="#image-gallery">
+                                    <img class="img-thumbnail" src="img/ClientPicture/1.jpg"
+                                        alt="residential-painting-img1">
+                                </a>
+                            </div>
+                            <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                <a class="thumbnail" href="#" data-image-id="residential-painting-img2"
+                                    data-toggle="modal" data-title="Residentail Painting Sample 2"
+                                    data-image="img/ClientPicture/3.jpg" data-target="#image-gallery">
+                                    <img class="img-thumbnail" src="img/ClientPicture/3.jpg"
+                                        alt="residential-painting-img2">
+                                </a>
+                            </div>
+                            <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                <a class="thumbnail" href="#" data-image-id="residential-painting-img3"
+                                    data-toggle="modal" data-title="Residentail Painting Sample 3"
+                                    data-image="img/ClientPicture/4.jpg" data-target="#image-gallery">
+                                    <img class="img-thumbnail" src="img/ClientPicture/4.jpg"
+                                        alt="residential-painting-img3">
+                                </a>
+                            </div>
+                            <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                <a class="thumbnail" href="#" data-image-id="residential-painting-img4"
+                                    data-toggle="modal" data-title="Residentail Painting Sample 4"
+                                    data-image="img/ClientPicture/5.jpg" data-target="#image-gallery">
+                                    <img class="img-thumbnail" src="img/ClientPicture/5.jpg"
+                                        alt="residential-painting-img4">
+                                </a>
+                            </div>
+                            <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                <a class="thumbnail" href="#" data-image-id="residential-painting-img5"
+                                    data-toggle="modal" data-title="Residentail Painting Sample 5"
+                                    data-image="img/ClientPicture/35.jpg" data-target="#image-gallery">
+                                    <img class="img-thumbnail" src="img/ClientPicture/35.jpg"
+                                        alt="residential-painting-img5">
+                                </a>
+                            </div>
+
+
+                            <div class="modal fade" id="image-gallery" tabindex="-1" role="dialog"
+                                aria-labelledby="myModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h4 class="modal-title" id="image-gallery-title"></h4>
+                                            <button type="button" class="close" data-dismiss="modal"><span
+                                                    aria-hidden="true">×</span><span class="sr-only">Close</span>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <img id="image-gallery-image" class="img-responsive col-md-12" src="">
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary float-left"
+                                                id="show-previous-image"><i class="fa fa-arrow-left"></i>
+                                            </button>
+
+                                            <button type="button" id="show-next-image"
+                                                class="btn btn-secondary float-right"><i class="fa fa-arrow-right"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </div>
 
     <!-- Footer -->
-    <footer class="pt-5 pb-4" id="contact">
+    <footer class=" pt-5 pb-4" id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
                     <h5 class="mb-4 font-weight-bold">CONTACT INFORMATION</h5>
-                    <p class="mb-4">Etiam laoreet in ex quis efficitur.</p>
                     <ul class="f-address">
                         <li>
                             <div class="row">
                                 <div class="col-1"><i class="fas fa-location-arrow"></i></div>
                                 <div class="col-8">
                                     <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Address:</h6>
-                                    <p><a href="https://goo.gl/maps/FNS5EVP6fif1V3y38">31 Murray Rd Dandenong North VIC
+                                    <p><a href="https://goo.gl/maps/FNS5EVP6fif1V3y38">31 Murray Rd
+                                            Dandenong North VIC
                                             3175</a></p>
                                 </div>
                             </div>
@@ -169,8 +324,10 @@
                             <div class="row">
                                 <div class="col-1"><i class="fas fa-envelope"></i></div>
                                 <div class="col-8">
-                                    <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Have any questions?</h6>
-                                    <p><a href="mailto:miladpainting@gmail.com">miladpainting@gmail.com</a></p>
+                                    <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Have any
+                                        questions?</h6>
+                                    <p><a href="mailto:miladpainting@gmail.com">miladpainting@gmail.com</a>
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -178,7 +335,8 @@
                             <div class="row">
                                 <div class="col-1"><i class="fas fa-phone"></i></div>
                                 <div class="col-9">
-                                    <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Phone Number:</h6>
+                                    <h6 class="font-weight-bold mb-0" style="font-size: 13px;">Phone Number:
+                                    </h6>
                                     <p><a href="tel:+6142130103">+61 421301030</a></p>
                                 </div>
                             </div>
@@ -203,6 +361,7 @@
     </footer>
 
 
+    <!-- javascript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -210,6 +369,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
     <script src="service-sidebar.js"></script>
+
+    <script src="servicePictureModal.js"></script>
 
 </body>
 
