--- a/exterior-painting.html
+++ b/exterior-painting.html
@@ -11,15 +11,14 @@
     <link rel="stylesheet" href="banner.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-
-
+    <link rel="stylesheet" href="breadcrumb.css">
+    <link rel="stylesheet" href="service-sidebar.css">
 
     <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
 
 </head>
 
 <body>
-
     <!-- Header -->
     <div class="container-fluid">
         <div class="row image-container" style="background-color: white; height: 80px;">
@@ -93,9 +92,40 @@
         </div>
     </nav>
 
+    <!-- Breadcrumb Part -->
+    <div id="heading-breadcrumbs">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="breadcrumb">
+                        <li><a href="home.html">Home</a></li>
+                        <li>Residential Painters</li>
+                    </ul>
+                    <h1>Residential Painters</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container" style="margin-top:30px">
         <div class="row">
-            <div class="col-sm-8">
+            <div class="col-sm-2">
+                <div id="myNav" class="overlay">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <div class="overlay-content">
+                        <a href="residential-painting.html">Residential Painters</a>
+                        <a href="spray-painting.html">Spraying Painters</a>
+                        <a href="roof-painting.html">Roof Painters</a>
+                        <a href="commerical-painting.html">Commercial Painters</a>
+                        <a href="plastering.html">Plastering</a>
+                        <a href="dulux-colour-consultation.html">Dulux Colour Consultation</a>
+                    </div>
+                </div>
+
+                <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; Our Service</span>
+            </div>
+
+            <div class="col-sm-10">
                 <h2>TITLE HEADING</h2>
                 <h5>Title description, Dec 7, 2017</h5>
                 <div class="fakeimg">Fake Image</div>
@@ -116,16 +146,6 @@
                     exercitation
                     ullamco.</p>
             </div>
-            <div class="col-sm-4">
-                <h2>Side Bar</h2>
-                <!-- The sidebar -->
-                <div class="sidebar">
-                    <a class="active" href="#home">Home</a>
-                    <a href="#news">News</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#about">About</a>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -135,7 +155,6 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
                     <h5 class="mb-4 font-weight-bold">CONTACT INFORMATION</h5>
-                    <p class="mb-4">Etiam laoreet in ex quis efficitur.</p>
                     <ul class="f-address">
                         <li>
                             <div class="row">
@@ -190,6 +209,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+    <script src="service-sidebar.js"></script>
+
 </body>
+
 
 </html>
