--- a/plastering.html
+++ b/plastering.html
@@ -11,16 +11,15 @@
     <link rel="stylesheet" href="banner.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-
-
+    <link rel="stylesheet" href="breadcrumb.css">
+    <link rel="stylesheet" href="service-sidebar.css">
 
     <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
 
 </head>
 
 <body>
-
-    <!-- Header -->
+    <!-- Logon Header -->
     <div class="container-fluid">
         <div class="row image-container" style="background-color: white; height: 80px;">
             <a href="home.html"><img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image"
@@ -60,6 +59,7 @@
         </div>
     </div>
 
+    <!-- navigation part -->
     <nav class="navbar navbar-expand-md  navbar-dark bg-dark" id="menu-nav">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar"
             aria-controls="navigation-bar" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,38 +93,97 @@
         </div>
     </nav>
 
+    <!-- Breadcrumb Part -->
+    <div id="heading-breadcrumbs">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="breadcrumb">
+                        <li><a href="home.html">Home</a></li>
+                        <li>Plastering</li>
+                    </ul>
+                    <h1>Plastering</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Main content -->
     <div class="container" style="margin-top:30px">
         <div class="row">
-            <div class="col-sm-8">
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Dec 7, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
-                <br>
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Sep 2, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
-            </div>
-            <div class="col-sm-4">
-                <h2>Side Bar</h2>
-                <!-- The sidebar -->
-                <div class="sidebar">
-                    <a class="active" href="#home">Home</a>
-                    <a href="#news">News</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#about">About</a>
+            <div class="col-sm-2">
+
+                <!-- our service side-navbar -->
+                <div id="myNav" class="overlay">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <div class="overlay-content">
+                        <a href="residential-painting.html">Residential Painters</a>
+                        <a href="spray-painting.html">Spraying Painters</a>
+                        <a href="roof-painting.html">Roof Painters</a>
+                        <a href="commerical-painting.html">Commercial Painters</a>
+                        <a class="active" href="plastering.html">Plastering</a>
+                        <a href="dulux-colour-consultation.html">Dulux Colour Consultation</a>
+                    </div>
                 </div>
+
+                <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; Our Service</span>
+            </div>
+
+            <div class="col-sm-10">
+                <h2
+                    style="margin-bottom: 10px; font-family: 'Zhi Mang Xing', cursive; letter-spacing: 3px; font-size: 50px; font-weight:bold;">
+                    Plastering In Melbounre</h2>
+                <img style="width: 100%; " src="img/webimg/plastering.jpg">
+
+                <p style="font-size: 18px;">The process of plastering might seem to be an easy task. But then it is an
+                    art by itself which requires accuracy and perfection in the technique, extreme attention to minute
+                    details, and fair amount of knowledge about how it has to be done. Ansell Painters Melbourne master
+                    in the art of Plas tering and you will have no worries when they are handling your plastering work!!
+                </p>
+                <p style="font-size: 18px;">The very first step in plastering project is to collect the tools required
+                    for plastering. Tools used for plastering varied from project to project. But essentially there are
+                    a few tools that are used in almost all kinds of plastering work.
+                </p>
+                <p style="font-size: 18px;">
+                    &#10061; Plasterers & Bucket trowels
+                    <br />
+                    &#10061; Hawk
+                    <br />
+                    &#10061; Plastic bucket
+                    <br />
+                    &#10061; Plaster (“Multi-finish” or “One coat”)
+                    <br />
+                    &#10061; Mixing stick
+                    <br />
+                    &#10061; Splash brush
+                    <br />
+                    &#10061; Water
+                    <br />
+                    <p style="font-size: 18px;">After gathering the tools for plastering, one important thing to be kept
+                        in mind is proper cleaning of the tools used for plastering. This is because the whole process
+                        of plastering will get spoilt if any small, old dried pieces of plasters are left behind in the
+                        tools that are used further. This can easily be avoided with proper cleaning and inspection.
+                        Another important process involved in plastering is mixing and application of plasters. You got
+                        to do it spontaneously because once the plaster is mixed; you have very little time to apply it
+                        before it becomes hard and unusable. Often, the application of fresh plaster on a new
+                        plasterboard surface is less complicated than the repair or refinishing job that is done on a
+                        previously plastered surface. Always make sure you give sufficient time for the applied plasters
+                        to get dried.</p>
+                    <p style="font-size: 18px;">The key to successful plastering is to ensure that the surface to be
+                        plastered is well prepared and ready to apply plaster! Spending considerable time on preparation
+                        is the only way to make sure a good finish later on, so never be tempted to take any shortcuts.
+                    </p>
+                    <p style="font-size: 18px;">Ok! Now you would have never thought plastering is such a long and
+                        minute process to be handled! It can very well be done by yourself but when you have
+                        professional people to work for you, at best budgets, why do you need to do it all yourself??
+                        Ansell Painting has got a team of professional and experienced painters who do excellent
+                        plastering work as well!! They will make your plastering work easier and finish them with a
+                        professional touch! We are located in Melbourne and extend our services to other nearby suburbs
+                        as well!
+                    </p>
+                    <p style="font-size: 18px;"><strong>Contact Us</strong> to get your free quote <a
+                            href="tel:+6142130103">0421301030</a> , immediately!
+                    </p>
             </div>
         </div>
     </div>
@@ -135,7 +194,6 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
                     <h5 class="mb-4 font-weight-bold">CONTACT INFORMATION</h5>
-                    <p class="mb-4">Etiam laoreet in ex quis efficitur.</p>
                     <ul class="f-address">
                         <li>
                             <div class="row">
@@ -190,6 +248,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+    <script src="service-sidebar.js"></script>
+
 </body>
+
 
 </html>
