--- a/roof-painting.html
+++ b/roof-painting.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="banner.css">
     <link rel="stylesheet" href="nav.css">
     <link rel="stylesheet" href="footer.css">
-
+    <link rel="stylesheet" href="breadcrumb.css">
+    <link rel="stylesheet" href="service-sidebar.css">
+    <link rel="stylesheet" href="servicePictureModal.css">
 
 
     <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
@@ -19,8 +21,7 @@
 </head>
 
 <body>
-
-    <!-- Header -->
+    <!-- Logon Header -->
     <div class="container-fluid">
         <div class="row image-container" style="background-color: white; height: 80px;">
             <a href="home.html"><img src="img/webimg/logo.png" class="img-responsive center" alt="Responsive image"
@@ -60,6 +61,7 @@
         </div>
     </div>
 
+    <!-- navigation part -->
     <nav class="navbar navbar-expand-md  navbar-dark bg-dark" id="menu-nav">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation-bar"
             aria-controls="navigation-bar" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,38 +95,190 @@
         </div>
     </nav>
 
+    <!-- Breadcrumb Part -->
+    <div id="heading-breadcrumbs">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <ul class="breadcrumb">
+                        <li><a href="home.html">Home</a></li>
+                        <li>Roof Painters</li>
+                    </ul>
+                    <h1>Roof Painters</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Main content -->
     <div class="container" style="margin-top:30px">
         <div class="row">
-            <div class="col-sm-8">
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Dec 7, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
-                <br>
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Sep 2, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
-                    eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation
-                    ullamco.</p>
-            </div>
-            <div class="col-sm-4">
-                <h2>Side Bar</h2>
-                <!-- The sidebar -->
-                <div class="sidebar">
-                    <a class="active" href="#home">Home</a>
-                    <a href="#news">News</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#about">About</a>
+            <div class="col-sm-2">
+
+                <!-- our service side-navbar -->
+                <div id="myNav" class="overlay">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <div class="overlay-content">
+                        <a href="residential-painting.html">Residential Painters</a>
+                        <a href="spray-painting.html">Spraying Painters</a>
+                        <a class="active" href="roof-painting.html">Roof Painters</a>
+                        <a href="commerical-painting.html">Commercial Painters</a>
+                        <a href="plastering.html">Plastering</a>
+                        <a href="dulux-colour-consultation.html">Dulux Colour Consultation</a>
+                    </div>
                 </div>
+
+                <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; Our Service</span>
+            </div>
+
+            <div class="col-sm-10">
+                <h2
+                    style="margin-bottom: 10px; font-family: 'Zhi Mang Xing', cursive; letter-spacing: 3px; font-size: 50px; font-weight:bold;">
+                    Roof Painters in Melbourne</h2>
+                <p style="font-size: 18px;">Getting your House renovated and painted is a daunting task especially when
+                    it comes to paint restoration of your roofs, it can be very stressful! Relax, leave the stress to
+                    us.</p>
+
+                <img style="width: 100%; " src="img/webimg/roof_painter.jpeg">
+                <br />
+                <br />
+                <p style="font-size: 18px;">
+                    Milad Painting roof painters aim to work closely with our clients to explore a practical range of
+                    options and alternatives that will not only preserve the life and integrity of your roof but create
+                    the
+                    home you’ve always dreamed of. A roof replacement or roofing repair by roof painters Melbourne
+                    extends
+                    its life by many years, offering total protection to your family and your greatest asset. Milad
+                    Painting offers Melbourne homes a total roof painting service from roof restorations, roof repairs,
+                    roof
+                    coatings, roof painting to after paint roof cleaning.</p>
+
+                <p style="font-size: 18px;">
+                    Roof Painting of your house will change its appearance and give it a completely different look!
+                    Imagine how your house would look if it’s fully painted except for its roof!? Roofs are actually one
+                    of the most clearly visible parts of a house. Thus roof painting is a must and good idea to do when
+                    you paint your house.</p>
+                </br>
+                <h2 style="font-family: 'Zhi Mang Xing', cursive; font-size: 38px; font-weight:bold;">
+                    Why choosed Milad Painting?</h2>
+                <p style="font-size: 18px;">It’s just not the looks that matter but your roof painting is lot more
+                    advantageous because </p>
+
+                <p style="font-size: 18px;">
+                    &#10061; Roof painting helps in protecting your roof from Melbourne’s extreme weather conditions
+                    <br />
+                    &#10061; It makes the roof long lasting and durable
+                    <br />
+                    &#10061; Its less expensive than re-roofing your whole house
+                    <br />
+                    &#10061; It’s a quick and easy process
+                    <br />
+
+                    <p style="font-size: 18px;">Once you have decided to get a roof painting done, you need to clean it
+                        and look for any damage. Get it repaired if any and then paint. Choose a nice color that looks
+                        good for the roof and your roof painting is done! Milad Painting roof painters take care of
+                        your complete roof painting process.</p>
+                    </br>
+                    <h4 style="font-family: 'Zhi Mang Xing', cursive;  font-size: 30px; font-weight:bold;">Milad
+                        Painting Melbourne's Other Services
+                    </h4>
+
+                    <p style="font-size: 18px;">We also specialize in the following fields:</p>
+                    <a style="color: rgb(9, 161, 34); font-size: 18px;" href="residential-painting.html"> &#10061;
+                        Residential
+                        Painters</a>
+                    </br>
+                    <a style="color: rgb(9, 161, 34); font-size: 18px;" href="spray-painting.html"> &#10061; Spraying
+                        Painters</a>
+                    </br>
+                    <a style="color: rgb(9, 161, 34); font-size: 18px;" href="roof-painting.html"> &#10061; Roof
+                        Painters</a>
+                    </br>
+                    <a style="color: rgb(9, 161, 34); font-size: 18px;" href="commerical-painting.html"> &#10061;
+                        Commercial Painting</a>
+                    </br>
+                    <a style="color: rgb(9, 161, 34); font-size: 18px;" href="plastering.html"> &#10061; Plastering</a>
+                    </br>
+                    <a style="color: rgb(9, 161, 34); font-size: 18px;" href="dulux-colour-consultation.html"> &#10061;
+                        Dulux Colour
+                        Consultation</a>
+                    </br>
+                    </br>
+                    <p style="font-size: 18px;">When you have all solutions under one roof, you have no reason for a
+                        second thought! If you reside in any of the Melbourne suburbs, call us at <a
+                            href="tel:+6142130103">0442130103</a> to get the price list.</p>
+                    <p style="font-size: 18px;">Our service areas in Melbourne include Mulgrave, Keysborough, Oakleigh
+                        and St. Kilda</p>
+
+                    <div class="container">
+                        <div class="row">
+                            <div class="row">
+                                <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                    <a class="thumbnail" href="#" data-image-id="roof-painting-img1" data-toggle="modal"
+                                        data-title="Roof Painting Sample 1" data-image="img/ClientPicture/22.jpg"
+                                        data-target="#image-gallery">
+                                        <img class="img-thumbnail" src="img/ClientPicture/22.jpg"
+                                            alt="roof-painting-img1">
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                    <a class="thumbnail" href="#" data-image-id="roof-painting-img2" data-toggle="modal"
+                                        data-title="Roof Painting Sample 2" data-image="img/webimg/roof_painter_2.jpg"
+                                        data-target="#image-gallery">
+                                        <img class="img-thumbnail" src="img/webimg/roof_painter_2.jpg"
+                                            alt="roof-painting-img2">
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                    <a class="thumbnail" href="#" data-image-id="roof-painting-img3" data-toggle="modal"
+                                        data-title="Roof Painting Sample 3" data-image="img/ClientPicture/7.jpg"
+                                        data-target="#image-gallery">
+                                        <img class="img-thumbnail" src="img/ClientPicture/7.jpg"
+                                            alt="roof-painting-img3">
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-5 col-xs-7 thumb">
+                                    <a class="thumbnail" href="#" data-image-id="roof-painting-img4" data-toggle="modal"
+                                        data-title="Roof Painting Sample 4" data-image="img/ClientPicture/24.jpg"
+                                        data-target="#image-gallery">
+                                        <img class="img-thumbnail" src="img/ClientPicture/24.jpg"
+                                            alt="roof-painting-img4">
+                                    </a>
+                                </div>
+
+
+                                <div class="modal fade" id="image-gallery" tabindex="-1" role="dialog"
+                                    aria-labelledby="myModalLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-lg">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h4 class="modal-title" id="image-gallery-title"></h4>
+                                                <button type="button" class="close" data-dismiss="modal"><span
+                                                        aria-hidden="true">×</span><span class="sr-only">Close</span>
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <img id="image-gallery-image" class="img-responsive col-md-12" src="">
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary float-left"
+                                                    id="show-previous-image"><i class="fa fa-arrow-left"></i>
+                                                </button>
+
+                                                <button type="button" id="show-next-image"
+                                                    class="btn btn-secondary float-right"><i
+                                                        class="fa fa-arrow-right"></i>
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+
             </div>
         </div>
     </div>
@@ -135,7 +289,6 @@
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6 mt-2 mb-2">
                     <h5 class="mb-4 font-weight-bold">CONTACT INFORMATION</h5>
-                    <p class="mb-4">Etiam laoreet in ex quis efficitur.</p>
                     <ul class="f-address">
                         <li>
                             <div class="row">
@@ -190,6 +343,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
+    <script src="service-sidebar.js"></script>
+
+    <script src="servicePictureModal.js"></script>
+
+
 </body>
+
 
 </html>
